--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "firebase": "^10.11.1",
     "heroicons": "^2.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
