--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.2.0",
     "heroicons": "^2.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.10",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
